base/src/test/resources/failure/tyck/list-type-mismatch.aya.txt
In file $FILE:5:21 ->

  3 |   open data Mat | zero | suc Mat
  4 |   
  5 |   def bad => [ O, S O, zero, suc zero ]
    |                        ^--^

Error: Cannot check the expression
         zero
       of type
         Mat
       against the type
         Nat

In file $FILE:5:27 ->

  3 |   open data Mat | zero | suc Mat
  4 |   
  5 |   def bad => [ O, S O, zero, suc zero ]
    |                              ^------^

Error: Cannot check the expression
         suc zero
       of type
         Mat
       against the type
         Nat

2 error(s), 0 warning(s).
What are you doing?
